Thu Apr 14 15:10:30 2005  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* lib/irb/notifier.rb, lib/irb/output-method.rb, lib/irb/ext/history.rb
	  fixed warning of 'ruby -w'

Thu Apr 14 05:35:45 2005  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* doc/irb/irb.rd.ja: a lost  of release IRB 0.9.5.

	* lib/irb/slex.rb: bug fix by [ruby-core :04707].


Thu Apr 14 00:20:31 2005 Keiju Ishitsuka <keiju@ruby-lang.org>
	* bin/irb lib/irb.rb lib/irb/...: IRB 0.9.5.
	
Wed Apr 13 23:40:21 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::VERSION): 0.1.3 -> 0.1.4.

	* lib/rss/rss.rb (RSS::Element#converter): fixed converter
	  transmission bug.

Wed Apr 13 22:12:16 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#order!): call handlers iff matches
	  non-switch.

Wed Apr 13 21:20:35 2005  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (mingw32): extract msvcr*.dll from objdump result.

Wed Apr 13 19:25:31 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (mingw32): use actual runtime DLL name as ruby DLL
	  name and default load path.

	* win32/Makefile.sub, win32/setup.mak: ditto.

Tue Apr 12 19:30:36 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#make_switch, OptionParser#order!):
	  added non-option and end-of-args handler.  [ruby-talk:136878]
	  (EXPERIMENTAL

Tue Apr 12 15:33:09 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c (ip_finalize): better modification than the
	  previous commit [ruby-dev:26029].

Tue Apr 12 12:38:06 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c (ip_finalize): fix SEGV when Tcl_GlobalEval()
	  modifies the argument string to eval.

Tue Apr 12 02:21:55 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c (ip_finalize): add existence check of
	  Tcl commands before calling Tcl_GlobalEval().

Mon Apr 11 23:36:04 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>
