@@ -1,3 +1,14 @@
+#
+#   help.rb - helper using ri
+#   	$Release Version: 0.9.5$
+#   	$Revision$
+#   	$Date$
+#
+# --
+#
+#   
+#
+
 require 'rdoc/ri/ri_driver'
 
 module IRB
